# AgentMesh-Lecturecast

./: .gitattributes  .gitignore  AGENTS.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: site-contract.yml  windows-contract.yml
docs/: FIRST-TIME-CUSTOMER-VALIDATION-2026-07-19.md  LECTURECAST-SYSTEM-BOUNDARY.md  LOCAL-OUTCOME-EVIDENCE.md  LOCAL-WORKFLOW.md  NARRATION-TIMING-CONTRACT.md  RELEASE-DOGFOOD.md  SIGNING-KEYRING.md  SUPPORTED-PLATFORMS.md
scripts/: __init__.py  build_component_catalog.mjs  install.ps1  install.sh  manage_adapters.ps1  manage_adapters.sh  uninstall.ps1  uninstall.sh  update_protocol.py  update_signing_keyring.py  validate_site.py
site/: CNAME  index.html  llms.txt  robots.txt  sitemap.xml
site/en/: index.html
site/ja/: index.html
site/ko/: index.html
skills/claude-code/: SKILL.md
skills/codex/: SKILL.md
skills/openclaw/: SKILL.md
skills/shared/: director-workflow.md
src/lecturecast/: api.py  assets.py  auth.py  capabilities.py  cli.py  commercial.py  component-catalog.json  config.py  director.py  dogfood.py  errors.py  file_lock.py  host_agent.py  keyring_update.py  manifest.py  outcome.py  preflight.py  project.py  signing-keyring.json  timing.py
src/lecturecast/commands/: __init__.py  agent.py  auth.py  director.py  doctor.py  dogfood.py  manifest.py  onboard.py  outcome.py  output.py  project.py
src/lecturecast/protocol/: __init__.py  canonical.py  models.py  update.py
src/lecturecast/protocol/schemas/: client-capabilities.schema.json  creative-brief.schema.json  decision-card-set.schema.json  error-envelope.schema.json  production-manifest.schema.json
templates/remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
templates/remotion/src/: CodeBlock.tsx  Cover.tsx  CoverH.tsx  Root.tsx  Video.tsx  VideoH.tsx  anim.ts  kit.tsx  kitH.tsx  theme.ts
templates/remotion/src/director/: ManifestContext.tsx  ManifestCover.tsx  ManifestVideo.tsx  component-definitions.json  layout.ts  registry.tsx  types.ts  validate.ts
templates/remotion/src/director/components/: common.tsx  index.tsx
templates/remotion/src/director/fixtures/: production-manifest-v1.json
templates/remotion/src/scenes/: End.tsx  Hook.tsx
templates/remotion/src/scenesH/: EndH.tsx  HookH.tsx
templates/shared/: build_audio_mm.py  build_manifest_audio.py  build_manifest_subtitles.py  build_manifest_video.ps1  build_manifest_video.sh  build_srt.py  build_video.ps1  build_video.sh  manifest_output_name.py  prepare_manifest_render.py  srt_to_ass.py  srt_to_ass_vertical.py  subtitle_font.py  update_theme.py  validate_manifest_outputs.py
tests/: conftest.py  test_adapter_install.py  test_auth.py  test_capabilities.py  test_cli.py  test_cli_loop2.py  test_commercial.py  test_commercial_cli_gate.py  test_component_catalog.py  test_director_cli.py  test_dogfood_gate.py  test_ftux_contract.py  test_host_agent_workflow.py  test_manifest.py  test_manifest_execution_templates.py  test_onboard.py  test_outcome.py  test_platform_contract.py  test_preflight.py  test_project.py  test_protocol_contract.py  test_signing_keyring_release.py  test_site_contract.py  test_subtitle_templates.py  test_timing.py
tests/fixtures/: client-capabilities-v1.json  creative-brief-v1.json  decision-card-set-v1.json  production-manifest-v1.json  signing-keyring-v1.json
