[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lecturecast"
version = "0.3.0"
description = "Open-source, fully local video workflow for AI agents — turn a topic into B站 + 小红书 course videos on your own machine"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "jiyangnan", email = "niclolaszhaosi@gmail.com" }]
keywords = ["lecturecast", "agentmesh", "video", "course", "bilibili", "xiaohongshu", "remotion", "local"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
lecturecast = "lecturecast.cli:app"

[project.urls]
Repository = "https://github.com/jiyangnan/AgentMesh-Lecturecast"
Issues = "https://github.com/jiyangnan/AgentMesh-Lecturecast/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lecturecast"]
