[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lecturecast"
version = "0.3.1"
description = "Open-source, fully local video workflow for AI agents — turn a topic into B站 + 小红书 course videos on your own machine"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "jiyangnan", email = "niclolaszhaosi@gmail.com" }]
keywords = ["lecturecast", "agentmesh", "video", "course", "bilibili", "xiaohongshu", "remotion", "local"]
dependencies = [
    "cryptography>=43",
    "jsonschema>=4.23",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
auth = [
    "keyring>=25",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-jsonschema>=4.23",
]

[project.scripts]
lecturecast = "lecturecast.cli:app"

[project.urls]
Repository = "https://github.com/jiyangnan/AgentMesh-Lecturecast"
Issues = "https://github.com/jiyangnan/AgentMesh-Lecturecast/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lecturecast"]

[tool.hatch.build.targets.wheel.force-include]
"src/lecturecast/signing-keyring.json" = "lecturecast/signing-keyring.json"
"src/lecturecast/component-catalog.json" = "lecturecast/component-catalog.json"
"src/lecturecast/component-catalog.lock" = "lecturecast/component-catalog.lock"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["templates", "site"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
files = ["src"]
